plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'net.arturkeska'
version = '0.0.1-SNAPSHOT'

ext['reactor-bom.version'] = '2024.0.0'

tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add('--enable-preview')
}

tasks.withType(Test).configureEach {
	jvmArgs += "--enable-preview"
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation('org.springframework.boot:spring-boot-starter-web') {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
	}


	implementation 'org.springframework.boot:spring-boot-starter-jetty'

	implementation 'org.eclipse.jetty:jetty-alpn-java-server:12.0.1'
	implementation 'org.eclipse.jetty:jetty-alpn-conscrypt-server:12.0.1'
	implementation 'org.eclipse.jetty.http3:jetty-http3-server:12.0.1'
	implementation 'org.eclipse.jetty.http2:jetty-http2-server:12.0.1'

	implementation 'io.projectreactor.netty:reactor-netty-http'

	implementation 'io.netty.incubator:netty-incubator-codec-http3:0.0.28.Final'

	implementation group: 'tech.kwik', name: 'flupke', version: '0.5.3'

	implementation 'com.google.code.gson:gson:2.11.0'

	testImplementation('org.springframework.boot:spring-boot-starter-test')
}

tasks.named('test') {
	useJUnitPlatform()
}